docs/examples/monitoring-kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-monitor
  namespace: monitoring
spec:
  parentRefs:
    - name: public
      namespace: nginx-gateway
      sectionName: monitoring-https
  hostnames:
    - monitoring.opsbox.org
  rules:
    - backendRefs:
        - name: kubernetes-monitor
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-monitor-redirect
  namespace: monitoring
spec:
  parentRefs:
    - name: public
      namespace: nginx-gateway
      sectionName: monitoring-http
  hostnames:
    - monitoring.opsbox.org
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
